--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <body>
         <div class="maindiv">
             <h1>Simple Interest Calculator</h1>
+            <div>Amount <input type="number" id="principal"> <br /></div>
             Interest Rate <input onchange="updateRate()" type="range" id="rate" min=1 max=20 value=10.25>
             <span id="rate_val">
             </span><br />
-            <div>Amount <input type="number" id="principal"> <br /></div>
+    
             <div>
                 <label>No. of Years </label> <select id="years">
                     <option value="1">1</option>
@@ -25,7 +26,7 @@
                 </select><br />
             </div>
             <button onclick="compute()">Compute</button><br />
-            <div>Interest : <span id="result"></span><br /></div>
+            <div id="result">Interest : <span id="result"></span><br /></div>
             <footer>
                 &#169; This Calculator belongs to RudraTejaBurgula
             </footer>
