--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <option value="10">10</option>
                 </select><br />
             </div>
-            <button onclick="compute()">Compute</button><br />
+            <button onclick="compute()">Compute Interest</button><br />
             <div id="result">Interest : <span id="result"></span><br /></div>
             <footer>
                 &#169; This Calculator belongs to RudraTejaBurgula
